Kernel#abort without arguments should print error info

[Bug #16424]